<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.guerlab.cloud</groupId>
    <artifactId>guerlab-cloud</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Guerlab Cloud</name>
    <description>Guerlab Cloud</description>
    <url>https://gitee.com/guerlab_net/guerlab-cloud</url>

    <parent>
        <groupId>net.guerlab.builder</groupId>
        <artifactId>guerlab-builder</artifactId>
        <version>1.0.1</version>
    </parent>

    <licenses>
        <license>
            <name>GNU LESSER GENERAL PUBLIC LICENSE Version 3</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>guer</id>
            <name>guer</name>
            <email>master@guerlab.net</email>
            <organization>guerlab</organization>
            <organizationUrl>https://www.guerlab.net</organizationUrl>
        </developer>
    </developers>

    <organization>
        <name>guerlab</name>
        <url>https://www.guerlab.net</url>
    </organization>

    <scm>
        <connection>scm:git:https://gitee.com/guerlab_net/guerlab-cloud.git</connection>
        <developerConnection>scm:git:https://gitee.com/guerlab_net/guerlab-cloud.git</developerConnection>
        <url>https://gitee.com/guerlab_net/guerlab-cloud</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>gitee</system>
        <url>https://gitee.com/guerlab_net/guerlab-cloud/issues</url>
    </issueManagement>

    <properties>
        <revision>21.8.0</revision>
        <main.basedir>${basedir}</main.basedir>

        <java.version>11</java.version>
        <project.encoding>UTF-8</project.encoding>

        <guerlab-spring.version>5.1.2</guerlab-spring.version>
        <guerlab-commons.version>2.0.1</guerlab-commons.version>
        <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
        <spring-boot-admin.version>2.4.1</spring-boot-admin.version>
        <jjwt.version>0.9.1</jjwt.version>
        <guava.version>24.1.1-jre</guava.version>
        <easyexcel.version>2.2.9</easyexcel.version>
        <springdoc.version>1.5.8</springdoc.version>
        <nacos.version>2.0.2</nacos.version>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.guerlab.spring</groupId>
                <artifactId>guerlab-spring</artifactId>
                <version>${guerlab-spring.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-dependencies</artifactId>
                <version>${spring-boot-admin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- guerlab-cloud basic -->
            <dependency>
                <groupId>net.guerlab</groupId>
                <artifactId>guerlab-commons</artifactId>
                <version>${guerlab-commons.version}</version>
            </dependency>

            <!-- guerlab-cloud basic -->
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-api</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- guerlab-cloud auth -->
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-auth</artifactId>
                <version>${revision}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-auth-commons</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-auth-web-support</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- guerlab-cloud cache -->
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-cache</artifactId>
                <version>${revision}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-cache-redis</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- guerlab-cloud commons -->
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-commons</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- guerlab-cloud server -->
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server</artifactId>
                <version>${revision}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-commons</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-openapi-commons</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-openapi-webflux</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-openapi-webmvc</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-orm</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-sentinel</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-webflux</artifactId>
                <type>pom</type>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-server-webmvc</artifactId>
                <type>pom</type>
                <version>${revision}</version>
            </dependency>

            <!-- guerlab-cloud stream -->
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-stream</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- guerlab-cloud excel -->
            <dependency>
                <groupId>net.guerlab.cloud</groupId>
                <artifactId>guerlab-cloud-excel</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- swagger -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-common</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-webflux-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- nacos -->
            <dependency>
                <groupId>com.alibaba.nacos</groupId>
                <artifactId>nacos-client</artifactId>
                <version>${nacos.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <modules>
        <module>guerlab-cloud-api</module>
        <module>guerlab-cloud-auth</module>
        <module>guerlab-cloud-cache</module>
        <module>guerlab-cloud-commons</module>
        <module>guerlab-cloud-excel</module>
        <module>guerlab-cloud-server</module>
        <module>guerlab-cloud-stream</module>
    </modules>
</project>
